[package]
name = "rsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["std_rng"] }
num-traits = { version = "0.2", features = ["libm"] }
num-bigint = { version = "^0.7", features = ["prime"], package = "num-bigint-dig" }
